force-app/main/default/objects/Event_Budget__c/Event_Budget__c.object-meta.xml
<CustomObject>
    <description>This object helps track both estimated and actual costs, giving the event organizers a clear picture of financial performance and ensuring the event stays within budget.</description>
    <label>Event Budget</label>
    <nameField>
        <displayFormat>EVTBUDGET-{0000}</displayFormat>
        <label>Event Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>