force-app/main/default/objects/Event_Budget__c/fields/Budget_Approved__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Approved</label>
    <type>Checkbox</type>
</CustomField>