force-app/main/default/objects/Event_Budget__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <formula>FB_Cost__c +  Hospitality_and_Venue_Cost__c +  logistics_Cost__c +  Miscelaneous_Cost__c +  Venue_Cost__c  +  Service_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>