force-app/main/default/objects/Event_Budget__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the event associated with the budget.</description>
    <label>Event Name</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Event Budgets</relationshipLabel>
    <relationshipName>Event_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>