force-app/main/default/objects/Event_Budget__c/fields/Event_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Event_Subcategory__c</fullName>
    <formula>TEXT(Event_Name__r.Event_Subcategory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Subcategory</label>
    <type>Text</type>
</CustomField>