force-app/main/default/objects/Event_Budget__c/fields/FB_Cost__c.field-meta.xml
<CustomField>
    <fullName>FB_Cost__c</fullName>
    <label>F&amp;B Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>