force-app/main/default/objects/Event_Budget__c/fields/Food_Package__c.field-meta.xml
<CustomField>
    <fullName>Food_Package__c</fullName>
    <label>Food Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Package</fullName>
            </value>
            <value>
                <fullName>Deluxe Package</fullName>
            </value>
            <value>
                <fullName>Breakfast Package</fullName>
            </value>
            <value>
                <fullName>Brunch Package</fullName>
            </value>
            <value>
                <fullName>Beverage Package</fullName>
            </value>
            <value>
                <fullName>Snack Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>