force-app/main/default/objects/Event_Budget__c/fields/Hospitality_and_Venue__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_and_Venue__c</fullName>
    <label>Hospitality and Venue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel Conference Room</fullName>
            </value>
            <value>
                <fullName>Banquet Hall</fullName>
            </value>
            <value>
                <fullName>Outdoor Venue</fullName>
            </value>
            <value>
                <fullName>Co-Working Space</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>