force-app/main/default/objects/Event_Budget__c/fields/Hospitality_and_Venue_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_and_Venue_Cost__c</fullName>
    <label>Hospitality Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>