force-app/main/default/objects/Event_Budget__c/fields/Logistics__c.field-meta.xml
<CustomField>
    <fullName>Logistics__c</fullName>
    <label>Logistics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Airplane</fullName>
            </value>
            <value>
                <fullName>Public Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>