force-app/main/default/objects/Event_Budget__c/fields/logistics_Cost__c.field-meta.xml
<CustomField>
    <fullName>logistics_Cost__c</fullName>
    <label>logistics Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>