force-app/main/default/objects/Event_Budget__c/fields/Miscelaneous_Cost__c.field-meta.xml
<CustomField>
    <fullName>Miscelaneous_Cost__c</fullName>
    <label>Miscelaneous Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>