force-app/main/default/objects/Event_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Attendees_Size__c</columns>
    <columns>Food_Package__c</columns>
    <columns>FB_Cost__c</columns>
    <columns>Hospitality_and_Venue__c</columns>
    <columns>Hospitality_and_Venue_Cost__c</columns>
    <columns>Logistics__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>